--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-primary: 124, 68, 79;
+  --color-secondary: 159, 82, 85;
+  --color-accent: 225, 106, 84;
+  --color-highlight: 243, 158, 96;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ffffff;
+  /* background: radial-gradient(circle at top right, #768c8c, #1c9191); */
+  color: #333;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.card-bg {
+  background-color: rgb(250, 250, 250);
+  border: 1px solid rgb(238, 238, 238);
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+}
+
+/* p {
+  font-family: 'Courier New', monospace;
+} */
+
